--- a/en/informacion.html
+++ b/en/informacion.html
@@ -1,72 +1,68 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="ACTEA: Proyecto de reactivación turística de Alto Campoo durante todo el año. Senderismo, cultura y naturaleza.">
-    <title>Información | ACTEA - Alto Campoo Todo El Año</title>
+        content="ACTEA: Tourism reactivation project for Alto Campoo year-round. Hiking, culture and nature.">
+    <title>Information | ACTEA - Alto Campoo All Year Round</title>
 
     <!-- Preconnect para Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+    
     <!-- Google Fonts con display=swap -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Roboto:wght@300;400;500;700&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap" rel="stylesheet">
 
     <!-- Estilos -->
-    <link rel="stylesheet" href="estilo/main.css">
+    <link rel="stylesheet" href="../estilo/main.css">
 
     <!-- JavaScript -->
-    <script defer src="js/main.js"></script>
+    <script defer src="../js/main.js"></script>
 </head>
 
 <body>
     <!-- Skip link -->
-    <a href="#main-content" class="visually-hidden">Saltar al contenido principal</a>
+    <a href="#main-content" class="visually-hidden">Skip to main content</a>
 
     <!-- Header -->
     <header class="header">
         <div class="container header-container">
             <a href="index.html" class="logo">
                 <div class="logo-brand">
-                    <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img" width="150" height="50">
+                    <img src="../img/logo_blanco.png" alt="Alto Campoo" class="logo-img">
                 </div>
             </a>
 
             <!-- Navegación Desktop -->
-            <nav class="nav-desktop" aria-label="Navegación principal">
+            <nav class="nav-desktop" aria-label="Main navigation">
                 <ul class="nav-list">
-                    <li><a href="index.html" class="nav-link">Inicio</a></li>
-                    <li><a href="rutas.html" class="nav-link">Rutas</a></li>
-                    <li><a href="novedades.html" class="nav-link">Novedades</a></li>
-                    <li><a href="actividades.html" class="nav-link">Actividades</a></li>
-                    <li><a href="informacion.html" class="nav-link active">Información</a></li>
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="rutas.html" class="nav-link">Routes</a></li>
+                    <li><a href="novedades.html" class="nav-link">News</a></li>
+                    <li><a href="actividades.html" class="nav-link">Activities</a></li>
+                    <li><a href="informacion.html" class="nav-link active">Information</a></li>
                 </ul>
             </nav>
 
             <!-- Widgets -->
             <div class="header-widgets">
-                <div class="weather-widget" id="weather-widget" title="Clima en Alto Campoo">
+                <div class="weather-widget" id="weather-widget" title="Weather in Alto Campoo">
                     <span class="material-symbols-outlined">wb_cloudy</span>
                     <span class="weather-temp">--°C</span>
                 </div>
 
                 <div class="lang-selector">
-                    <select id="lang-select" aria-label="Seleccionar idioma"
-                        onchange="const file = window.location.pathname.split('/').pop() || 'index.html'; window.location.href = this.value === 'en' ? `/en/${file}` : `/${file}`;">
-                        <option value="es" selected>ES</option>
-                        <option value="en">EN</option>
+                    <select id="lang-select" aria-label="Select language" 
+                            onchange="const file = window.location.pathname.split('/en/').pop() || window.location.pathname.split('/').pop() || 'index.html'; window.location.href = this.value === 'en' ? `/en/${file}` : `/${file}`;">
+                        <option value="es">ES</option>
+                        <option value="en" selected>EN</option>
                     </select>
                 </div>
 
-                <button class="hamburger" aria-label="Abrir menú de navegación" aria-expanded="false"
+                <button class="hamburger" aria-label="Open navigation menu" aria-expanded="false"
                     aria-controls="mobile-menu">
                     <span class="material-symbols-outlined">menu</span>
                 </button>
@@ -76,46 +72,45 @@
 
     <!-- Menú Móvil Overlay -->
     <div class="mobile-menu-overlay"></div>
-    <div class="mobile-menu" id="mobile-menu" role="dialog" aria-modal="true" aria-label="Menú de navegación"
+    <div class="mobile-menu" id="mobile-menu" role="dialog" aria-modal="true" aria-label="Navigation menu"
         aria-hidden="true">
         <div class="mobile-menu-header">
             <a href="index.html" class="logo mobile-logo">
                 <div class="logo-brand">
-                    <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150"
-                        height="50">
+                    <img src="../img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150" height="50">
                 </div>
             </a>
-            <button class="hamburger hamburger-close" aria-label="Cerrar menú">
+            <button class="hamburger hamburger-close" aria-label="Close menu">
                 <span class="material-symbols-outlined">close</span>
             </button>
         </div>
-        <nav aria-label="Navegación móvil">
+        <nav aria-label="Mobile navigation">
             <ul class="mobile-nav-list">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="rutas.html">Rutas</a></li>
-                <li><a href="novedades.html">Novedades</a></li>
-                <li><a href="actividades.html">Actividades</a></li>
-                <li><a href="informacion.html">Información</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="rutas.html">Routes</a></li>
+                <li><a href="novedades.html">News</a></li>
+                <li><a href="actividades.html">Activities</a></li>
+                <li><a href="informacion.html">Information</a></li>
             </ul>
         </nav>
     </div>
 
     <!-- MAIN CONTENT AREA -->
     <main id="main-content">
-        <section class="section-padding container" aria-label="Información y contacto">
+        <section class="section-padding container" aria-label="Information and contact">
             <div class="text-center section-header">
-                <h1 class="info-title">Información y Ayuda</h1>
-                <p class="info-subtitle">Todo lo que necesitas saber para planificar tu
-                    visita.</p>
+                <h1 class="info-title">Information and Help</h1>
+                <p class="info-subtitle">Everything you need to know to plan your
+                    visit.</p>
             </div>
             <div class="grid-layout info-grid">
                 <div>
-                    <h3>Contacto y Localización</h3>
+                    <h3>Contact and Location</h3>
                     <div class="contact-card">
                         <ul class="contact-list">
                             <li class="contact-item">
                                 <span class="material-symbols-outlined contact-icon">location_on</span>
-                                <span>Edificio Multiusos, Alto Campoo, Cantabria</span>
+                                <span>Multipurpose Building, Alto Campoo, Cantabria</span>
                             </li>
                             <li class="contact-item">
                                 <span class="material-symbols-outlined contact-icon">phone</span>
@@ -128,49 +123,49 @@
                         </ul>
                     </div>
 
-                    <h3>Preguntas Frecuentes</h3>
+                    <h3>Frequently Asked Questions</h3>
                     <details>
-                        <summary>¿Es necesario reservar?</summary>
+                        <summary>Do I need to make a reservation?</summary>
                         <div class="faq-content">
-                            <p>No para las rutas libres, pero sí recomendamos reservar para actividades guiadas y
-                                talleres específicos.</p>
+                            <p>Not for free routes, but we do recommend making reservations for guided activities and
+                                specific workshops.</p>
                         </div>
                     </details>
                     <details>
-                        <summary>¿Puedo llevar a mi perro?</summary>
+                        <summary>Can I bring my dog?</summary>
                         <div class="faq-content">
-                            <p>Sí, siempre que vaya atado y bajo control. Es fundamental respetar la fauna local y
-                                el ganado.</p>
+                            <p>Yes, as long as it is leashed and under control. It is essential to respect local wildlife and
+                                livestock.</p>
                         </div>
                     </details>
                     <details>
-                        <summary>¿Dónde aparcar?</summary>
+                        <summary>Where can I park?</summary>
                         <div class="faq-content">
-                            <p>Existen parkings habilitados en Brañavieja y en el inicio de las rutas principales.
-                                Evite aparcar en los arcenes.</p>
+                            <p>There are parking facilities in Brañavieja and at the start of the main routes.
+                                Avoid parking on the shoulders.</p>
                         </div>
                     </details>
                 </div>
 
                 <div class="contact-form-card" id="contacto">
-                    <h3 class="form-title">Envíanos un mensaje</h3>
+                    <h3 class="form-title">Send us a message</h3>
                     <form id="contact-form"
-                        onsubmit="event.preventDefault(); alert('Mensaje simulado enviado correctamente');">
+                        onsubmit="event.preventDefault(); alert('Message sent successfully (simulated)');">
                         <div class="form-group">
-                            <label class="form-label">Nombre</label>
-                            <input type="text" class="form-control" required placeholder="Tu nombre">
+                            <label class="form-label">Name</label>
+                            <input type="text" class="form-control" required placeholder="Your name">
                         </div>
                         <div class="form-group">
                             <label class="form-label">Email</label>
-                            <input type="email" class="form-control" required placeholder="tu@email.com">
+                            <input type="email" class="form-control" required placeholder="your@email.com">
                         </div>
                         <div class="form-group">
-                            <label class="form-label">Mensaje</label>
+                            <label class="form-label">Message</label>
                             <textarea class="form-control" rows="4" required
-                                placeholder="¿En qué podemos ayudarte?"></textarea>
+                                placeholder="How can we help you?"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-full">Enviar
-                            Mensaje</button>
+                        <button type="submit" class="btn btn-primary btn-full">Send
+                            Message</button>
                     </form>
                 </div>
             </div>
@@ -183,8 +178,8 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <h3>ACTEA</h3>
-                    <p class="footer-description">Proyecto de dinamización turística y conservación
-                        ambiental de Alto Campoo.</p>
+                    <p class="footer-description">Tourism development and environmental conservation
+                        project for Alto Campoo.</p>
                     <div class="social-icons">
                         <a href="#" class="social-icon" aria-label="Facebook">
                             <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" width="20"
@@ -210,28 +205,29 @@
                     </div>
                 </div>
                 <div class="footer-col">
-                    <h3>Enlaces Rápidos</h3>
+                    <h3>Quick Links</h3>
                     <ul class="footer-links">
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="rutas.html">Rutas</a></li>
-                        <li><a href="novedades.html">Eventos</a></li>
-                        <li><a href="informacion.html">Contacto</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="rutas.html">Routes</a></li>
+                        <li><a href="novedades.html">Events</a></li>
+                        <li><a href="informacion.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h3>Legal</h3>
                     <ul class="footer-links">
-                        <li><a href="#">Aviso Legal</a></li>
-                        <li><a href="#">Política de Privacidad</a></li>
-                        <li><a href="#">Política de Cookies</a></li>
+                        <li><a href="#">Legal Notice</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Cookie Policy</a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
-                &copy; 2025 ACTEA - Alto Campoo Todo El Año. IES Augusto González de Linares.
+                &copy; 2025 ACTEA - Alto Campoo All Year Round. IES Augusto González de Linares.
             </div>
         </div>
     </footer>
 </body>
 
 </html>
+
