--- a/en/novedades.html
+++ b/en/novedades.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="ACTEA: Proyecto de reactivación turística de Alto Campoo durante todo el año. Senderismo, cultura y naturaleza.">
-    <title>Actividades | ACTEA - Alto Campoo Todo El Año</title>
+        content="ACTEA: Tourism reactivation project for Alto Campoo year-round. Hiking, culture and nature.">
+    <title>News | ACTEA - Alto Campoo All Year Round</title>
 
     <!-- Preconnect para Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,52 +17,52 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap" rel="stylesheet">
 
     <!-- Estilos -->
-    <link rel="stylesheet" href="estilo/main.css">
+    <link rel="stylesheet" href="../estilo/main.css">
 
     <!-- JavaScript -->
-    <script defer src="js/main.js"></script>
+    <script defer src="../js/main.js"></script>
 </head>
 
 <body>
     <!-- Skip link -->
-    <a href="#main-content" class="visually-hidden">Saltar al contenido principal</a>
+    <a href="#main-content" class="visually-hidden">Skip to main content</a>
 
     <!-- Header -->
     <header class="header">
         <div class="container header-container">
             <a href="index.html" class="logo">
                 <div class="logo-brand">
-                    <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img" width="150" height="50">
+                    <img src="../img/logo_blanco.png" alt="Alto Campoo" class="logo-img" width="150" height="50">
                 </div>
             </a>
 
             <!-- Navegación Desktop -->
-            <nav class="nav-desktop" aria-label="Navegación principal">
+            <nav class="nav-desktop" aria-label="Main navigation">
                 <ul class="nav-list">
-                    <li><a href="index.html" class="nav-link">Inicio</a></li>
-                    <li><a href="rutas.html" class="nav-link">Rutas</a></li>
-                    <li><a href="novedades.html" class="nav-link">Novedades</a></li>
-                    <li><a href="actividades.html" class="nav-link active">Actividades</a></li>
-                    <li><a href="informacion.html" class="nav-link">Información</a></li>
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="rutas.html" class="nav-link">Routes</a></li>
+                    <li><a href="novedades.html" class="nav-link active">News</a></li>
+                    <li><a href="actividades.html" class="nav-link">Activities</a></li>
+                    <li><a href="informacion.html" class="nav-link">Information</a></li>
                 </ul>
             </nav>
 
             <!-- Widgets -->
             <div class="header-widgets">
-                <div class="weather-widget" id="weather-widget" title="Clima en Alto Campoo">
+                <div class="weather-widget" id="weather-widget" title="Weather in Alto Campoo">
                     <span class="material-symbols-outlined">wb_cloudy</span>
                     <span class="weather-temp">--°C</span>
                 </div>
 
                 <div class="lang-selector">
-                    <select id="lang-select" aria-label="Seleccionar idioma"
-                        onchange="const file = window.location.pathname.split('/').pop() || 'index.html'; window.location.href = this.value === 'en' ? `/en/${file}` : `/${file}`;">
-                        <option value="es" selected>ES</option>
-                        <option value="en">EN</option>
+                    <select id="lang-select" aria-label="Select language" 
+                            onchange="const file = window.location.pathname.split('/en/').pop() || window.location.pathname.split('/').pop() || 'index.html'; window.location.href = this.value === 'en' ? `/en/${file}` : `/${file}`;">
+                        <option value="es">ES</option>
+                        <option value="en" selected>EN</option>
                     </select>
                 </div>
 
-                <button class="hamburger" aria-label="Abrir menú de navegación" aria-expanded="false"
+                <button class="hamburger" aria-label="Open navigation menu" aria-expanded="false"
                     aria-controls="mobile-menu">
                     <span class="material-symbols-outlined">menu</span>
                 </button>
@@ -72,54 +72,70 @@
 
     <!-- Menú Móvil Overlay -->
     <div class="mobile-menu-overlay"></div>
-    <div class="mobile-menu" id="mobile-menu" role="dialog" aria-modal="true" aria-label="Menú de navegación" aria-hidden="true">
+    <div class="mobile-menu" id="mobile-menu" role="dialog" aria-modal="true" aria-label="Navigation menu"
+        aria-hidden="true">
         <div class="mobile-menu-header">
             <a href="index.html" class="logo mobile-logo">
                 <div class="logo-brand">
-                    <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150" height="50">
+                    <img src="../img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150" height="50">
                 </div>
             </a>
-            <button class="hamburger hamburger-close" aria-label="Cerrar menú">
+            <button class="hamburger hamburger-close" aria-label="Close menu">
                 <span class="material-symbols-outlined">close</span>
             </button>
         </div>
-        <nav aria-label="Navegación móvil">
+        <nav aria-label="Mobile navigation">
             <ul class="mobile-nav-list">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="rutas.html">Rutas</a></li>
-                <li><a href="novedades.html">Novedades</a></li>
-                <li><a href="actividades.html">Actividades</a></li>
-                <li><a href="informacion.html">Información</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="rutas.html">Routes</a></li>
+                <li><a href="novedades.html">News</a></li>
+                <li><a href="actividades.html">Activities</a></li>
+                <li><a href="informacion.html">Information</a></li>
             </ul>
         </nav>
     </div>
 
     <!-- MAIN CONTENT AREA -->
     <main id="main-content">
-        <section class="section-padding container" aria-label="Actividades complementarias">
+        <section class="section-padding container" aria-label="Latest news">
             <div class="text-center section-header">
-                <h1>Actividades Complementarias</h1>
-                <p>Disfruta de Alto Campoo de mil maneras diferentes.</p>
+                <h1>Agenda and News</h1>
+                <p>Stay up to date with events in the Campoo valley.</p>
             </div>
-            <div class="grid-layout">
-                <div class="activity-card activity-card-1">
-                    <div class="activity-overlay">
-                        <h3 class="activity-title">Cicloturismo</h3>
-                        <p>Rutas BTT señalizadas para todos los niveles.</p>
+            <div class="news-container">
+                <article class="news-card">
+                    <div class="news-date">
+                        <span class="day">15</span>
+                        <span class="month">Dec</span>
                     </div>
-                </div>
-                <div class="activity-card activity-card-2">
-                    <div class="activity-overlay">
-                        <h3 class="activity-title">Observación de Fauna</h3>
-                        <p>Avistamiento de venados, rebecos y aves rapaces.</p>
+                    <div class="news-content">
+                        <h3>Winter Routes Opening</h3>
+                        <p>Conditions are perfect for snowshoeing in the Calgosa area. Remember to
+                            check the weather forecast.</p>
                     </div>
-                </div>
-                <div class="activity-card activity-card-3">
-                    <div class="activity-overlay">
-                        <h3 class="activity-title">Gastronomía</h3>
-                        <p>Descubre los sabores tradicionales de los pueblos del valle.</p>
+                </article>
+                <article class="news-card">
+                    <div class="news-date">
+                        <span class="day">22</span>
+                        <span class="month">Dec</span>
                     </div>
-                </div>
+                    <div class="news-content">
+                        <h3>Night Photography Workshop</h3>
+                        <p>Learn to capture the Milky Way from the Fuente del Chivo viewpoint. Limited
+                            spots available.</p>
+                    </div>
+                </article>
+                <article class="news-card">
+                    <div class="news-date">
+                        <span class="day">05</span>
+                        <span class="month">Jan</span>
+                    </div>
+                    <div class="news-content">
+                        <h3>Three Kings Route</h3>
+                        <p>Special event for families. Easy route with surprises for the little ones.
+                        </p>
+                    </div>
+                </article>
             </div>
         </section>
     </main>
@@ -130,8 +146,8 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <h3>ACTEA</h3>
-                    <p class="footer-description">Proyecto de dinamización turística y conservación
-                        ambiental de Alto Campoo.</p>
+                    <p class="footer-description">Tourism development and environmental conservation
+                        project for Alto Campoo.</p>
                     <div class="social-icons">
                         <a href="#" class="social-icon" aria-label="Facebook">
                             <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" width="20"
@@ -157,28 +173,29 @@
                     </div>
                 </div>
                 <div class="footer-col">
-                    <h3>Enlaces Rápidos</h3>
+                    <h3>Quick Links</h3>
                     <ul class="footer-links">
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="rutas.html">Rutas</a></li>
-                        <li><a href="novedades.html">Eventos</a></li>
-                        <li><a href="informacion.html">Contacto</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="rutas.html">Routes</a></li>
+                        <li><a href="novedades.html">Events</a></li>
+                        <li><a href="informacion.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h3>Legal</h3>
                     <ul class="footer-links">
-                        <li><a href="#">Aviso Legal</a></li>
-                        <li><a href="#">Política de Privacidad</a></li>
-                        <li><a href="#">Política de Cookies</a></li>
+                        <li><a href="#">Legal Notice</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Cookie Policy</a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
-                &copy; 2025 ACTEA - Alto Campoo Todo El Año. IES Augusto González de Linares.
+                &copy; 2025 ACTEA - Alto Campoo All Year Round. IES Augusto González de Linares.
             </div>
         </div>
     </footer>
 </body>
 
 </html>
+
